<resources>
    <string name="app_name">UrMood</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="login_success">Logged in successfully</string>
    <string name="logout_success">Logged out successfully</string>
    <string name="login_fail">Log in failed</string>
    <string name="fail_fetching_user_data">Failed to fetch user data</string>
    <string name="register_fail">Register failed</string>
    <string name="register_succeed">Register succeed, please Log in to your account to continue</string>
    <string name="field_can_not_be_empty">This field can not be empty</string>
    <string name="login">Login</string>
    <string name="enter_your_e_mail">Enter your email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password_invalid">Password is invalid</string>
    <string name="email_invalid">Email format is invalid</string>
    <string name="welcome_back">Welcome!</string>
    <string name="login_and_discover">Login and discover your stress-free potential</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="app_logo">App logo</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="join_with_us">Join with us!</string>
    <string name="join_now">Join now and experience a journey to tranquility with us</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="welcome_to_urmood">Welcome to UrMood</string>
    <string name="feeling">Feeling overwhelmed? Let UrMood become your stress-busting companion.</string>
    <string name="stress_forecast">Your personal stress forecast is just a tap away</string>
    <string name="get_started">Get Started</string>
    <string name="about_app">About App</string>
    <string name="line_logo">Line logo</string>
    <string name="welcome_image">Welcome image</string>
    <string name="continued">Continue</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="been_overwhelmed">Been overwhelmed and stressed out lately?</string>
    <string name="urmood_is_here">UrMood is here to help you find your inner calm.</string>
    <string name="test_now">Test Now</string>
    <string name="sorry">Sorry, there is no checking history yet</string>
    <string name="background">Background</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_0">0</string>
    <string name="_0_4">0 – 4</string>
    <string name="how_old">How old are you?</string>
    <string name="what_city">What city do you live in?</string>
    <string name="occupation">What is your occupation?</string>
    <string name="question_1">In the past month, how often have you felt disappointed because something happened unexpectedly?</string>
    <string name="question_2">In the past month, how often have you felt like you weren\'t able to control the important things in your life?</string>
    <string name="question_3">In the past month, how often have you felt restless and stressed?</string>
    <string name="question_4">In the past month, how often have you felt confident in your ability to handle your personal problems?</string>
    <string name="question_5">In the past month, how often have you felt like things were going your way?</string>
    <string name="question_6">In the last month, how often have you found that you could not cope with all the things that you had to do?</string>
    <string name="question_7">In the past month, how often have you been able to control distractions in your life?</string>
    <string name="question_8">In the last month, how often have you felt good about everything you did?</string>
    <string name="question_9">In the past month, how often have you been angry because something happened that was out of your control?</string>
    <string name="question_10">In the past month, how often have you had so many difficulties that you couldn\'t handle them?</string>
    <string name="type_here">Type here</string>
    <string name="log_out">Log out</string>
    <string name="process">Proceed</string>
    <string name="daily_motivation">DAILY MOTIVATION</string>
    <string name="eat_much_so_not_easy_stress">Eat much so not easy stress…</string>
    <string name="mental_health_article">Get insight from articles below</string>
    <string name="fail_fetching_article">Failed to fetch article</string>
    <string name="fail_fetching_tips">Failed to fetch tips</string>
    <string name="about_app_description">urMood is an innovative app that combines the power of machine learning, expert articles, practical tips, and engaging events to help you assess, improve, and maintain your mental health. With its user-friendly interface and personalized approach, urMood empowers individuals to take control of their well-being and thrive in today\'s fast-paced world.
With urMood, you have a comprehensive mental health companion that leverages machine learning, expert knowledge, and community support to empower you on your journey to improved mental well-being. Take control of your mental health, access valuable resources, and discover a community that understands and supports you every step of the way.</string>
    <string name="result">Result</string>
    <string name="image_result">Image result</string>
    <string name="heavy_stress">It seems like you are having a heavy stress</string>
    <string name="med_stress">It seems like you are having a medium stress</string>
    <string name="light_stress">Congratulation! You seems fine</string>
    <string name="unknown_stress">Sorry, we are unable to predict your stress level</string>
    <string name="predicting_your_data">Predicting your data…</string>
    <string name="back_to_home">Back to Home</string>
    <string name="consult_now_with_our_expert">Get help from our expert:</string>
    <string name="event">Event</string>
    <string name="joint_event">Join the upcoming event and be the new You!</string>
    <string name="web_binar">Web Binar: Meditation Mastery</string>
    <string name="when">June 8, 19:00 pm WIB</string>
    <string name="special_guest">Special guest: Dr. Boyke</string>
    <string name="www_satupersen_com">www.satupersen.com</string>
    <string name="image">image</string>
    <string name="community_meet_up_jakarta">Community meet up: Jakarta</string>
    <string name="june_9_09_00_am_wib">June 9, 09.00 am WIB</string>
    <string name="rafles_jakarta">Rafles Jakarta</string>
    <string name="special_guest_aldi_taher">Special guest: Aldi Taher</string>
    <string name="web_binar_journey_to_tranquility">Web Binar: Journey to tranquility</string>
    <string name="special_guset_ir_dr_iwan">Special guset: Ir. Dr. Iwan A.MaPd PS.SI</string>
    <string name="protect_privacy_increase_solidarity">Protect privacy, increase solidarity</string>
    <string name="urmood_hq_jakarta">UrMood HQ, Jakarta</string>
    <string name="gelora_bung_soekarno_stadium">Gelora Bung Soekarno Stadium</string>
    <string name="sign_me_up">Sign up</string>
    <string name="wa_logo">WA logo</string>

    <string-array name="contact_name">
        <item>Satu Persen</item>
        <item>Dr. Iwan S.Psi.</item>
        <item>Dr. Permadi S.Psi.</item>
    </string-array>

    <integer-array name="contact_photo">
        <item>@drawable/satu_persen</item>
        <item>@drawable/dr_iwan</item>
        <item>@drawable/dr_permadi</item>
    </integer-array>

    <string-array name="contact_number">
        <item>+6285158871220</item>
        <item>+6285786756504</item>
        <item>+6281393193531</item>
    </string-array>

    <string-array name="contact_desc">
        <item>Professional self-improvement service</item>
        <item>An expert in his expertise</item>
        <item>A passionate expert</item>
    </string-array>
</resources>