<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_logo"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="34sp"
        android:fontFamily="@font/pjs_extrabold"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pjs_regular"
        android:text="@string/login_and_discover"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/pjs_semibold"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email" />

    <com.example.urmood.presentation.customview.EmailEditText
        android:id="@+id/et_email"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="100dp"
        android:hint="@string/enter_your_e_mail"
        android:fontFamily="@font/pjs_light"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="@font/pjs_semibold"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email" />

    <com.example.urmood.presentation.customview.PasswordEditText
        android:id="@+id/et_password"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_your_password"
        android:fontFamily="@font/pjs_light"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_login"
        android:layout_width="320dp"
        android:layout_height="58dp"
        android:text="@string/login"
        android:fontFamily="@font/pjs_extrabold"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:fontFamily="@font/pjs_regular"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bt_login"
        app:layout_constraintStart_toStartOf="@+id/bt_login"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_register"
        android:layout_width="320dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/blue_light"
        android:text="@string/register"
        android:fontFamily="@font/pjs_extrabold"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dont_have_account"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>