<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_onboard"
    tools:context=".presentation.ui.SplashActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/box_reason"
        android:src="@drawable/urmood"
        android:layout_marginBottom="200dp"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_logo"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/pjs_extrabold"
        android:textSize="34sp"
        android:textColor="@color/blue"
        android:alpha="0"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_forecast"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pjs_semibold"
        android:gravity="center_horizontal"
        android:text="@string/stress_forecast"
        android:textSize="16sp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/iv_forecast"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:src="@drawable/line"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forecast"
        android:contentDescription="@string/line_logo"/>

</androidx.constraintlayout.widget.ConstraintLayout>