<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_onboard"
    tools:context=".presentation.ui.OnboardingActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="29dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logou"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivReason"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="92dp"
        android:src="@drawable/onboard_reason"
        android:padding="25dp"
        android:background="@drawable/box_reason"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_to_urmood"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/pjs_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivReason" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvFeeling"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/feeling"
        android:textSize="16sp"
        android:textAlignment="center"
        android:fontFamily="@font/pjs_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetstarted"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/blue"
        android:text="@string/get_started"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFeeling" />



</androidx.constraintlayout.widget.ConstraintLayout>