<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:src="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="29dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvOverwhelmed"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:text="@string/been_overwhelmed"
            android:textSize="24sp"
            android:fontFamily="@font/pjs_regular"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvUrmoodIsHere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="26dp"
            android:textColor="@color/white"
            android:fontFamily="@font/pjs_regular"
            android:textSize="16sp"
            android:text="@string/urmood_is_here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOverwhelmed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTest"
            android:layout_width="168dp"
            android:layout_height="46dp"
            android:layout_marginTop="108dp"
            android:backgroundTint="@color/blue"
            android:text="@string/test_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>